public/css/styles.css
/* ... */
.player-award-tile,
.player-draft-tile {
    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
    background-color: #024e98;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
    color: #fff;
    font-size: 14px;
    margin-top: 10px;
    outline: solid 1px #000;
    padding: 3px 15px 3px 10px;
    width: -moz-fit-content;
    width: -webkit-fit-content;
    width: fit-content;
}

.player-button-container {
    margin-top: 5px;
    /* outline: solid 1px blue; */
}

.player-data-container {
    position: relative;
}

.player-data-container h2,
.regular-season-container h2,
.regular-season-container-no-games h2,
.team-stats-container h2 {
    border-bottom: solid 1px #000;
    color: #b22222;
    display: inline-block;
    font-size: 18px;
    margin-left: 20px;
    padding: 10px 25px 0 0;
    width: auto;
    /* outline: solid 1px blue; */
}

.player-data-container h2 p,
.regular-season-container h2 p {
    color: #000;
    font-size: 14px;
}

.player-data-container h2 p span,
.regular-season-container h2 p span {
    background-color: #1e90ff;
    border-radius: 50%;
    display: inline-block;
    height: 10px;
    width: 10px;
}

.player-heading-logo,
.team-heading-logo {
    -ms-flex-align: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    -webkit-box-pack: center;
    align-items: center;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    height: auto;
    justify-content: center;
    margin-left: 20px;
    width: 100px;
    /* outline: solid 1px blue; */
}

.player-heading-logo img,
.team-heading-logo img {
    -webkit-filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.75));
    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.75));
    height: auto;
    width: 100%;
}

.player-award-dropdown-list li h3:first-of-type,
.player-last-five li h3:first-of-type,
.player-stats li h3:first-of-type,
.team-lineup-defense li h3:first-of-type,
.team-lineup-forwards li h3:first-of-type,
.team-lineup-goalies li h3:first-of-type,
.team-stats li h3:first-of-type {
    min-width: 125px;
}
.player-stats li h3:nth-of-type(2) {
    min-width: 215px;
}

.player-stats li:last-of-type {
    background-color: #024e98;
    color: #fff;
    font-weight: bold;
}

.player-award-dropdown-list li p:first-of-type,
.player-last-five li p:first-of-type,
.player-stats li p:first-of-type,
.team-lineup-defense li p:first-of-type,
.team-lineup-forwards li p:first-of-type,
.team-lineup-goalies li p:first-of-type,
.team-stats li p:first-of-type {
    font-weight: bold;
    min-width: 125px;
    padding: 2px 5px;
}
.player-stats li p:nth-of-type(2) {
    min-width: 215px;
}

.playoff-season-marker {
    -webkit-transform: translateY(-50%);
    background-color: #1e90ff;
    border-radius: 50%;
    height: 8px;
    position: absolute;
    right: 8px;
    top: 50%;
    transform: translateY(-50%);
    width: 8px;
}

.player-team {
    color: #000;
    font-size: 16px;
    font-weight: bold;
    margin: 0;
    padding-right: 5px;
    position: relative;
    /* outline: solid 1px red; */
}

.player-team span {
    -webkit-transform: translateY(-50%);
    height: auto;
    left: 100%;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 45px;
}

.player-team span img {
    -webkit-filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.75));
    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.75));
    height: auto;
    width: 100%;
}

.preseason-scrolling-container {
    padding: 20px 0;
}

.regular-season-container {
    min-height: 525px;
    position: relative;
    /* outline: solid 1px blue; */
}

.regular-season-container-no-games {
    min-height: 300px;
    padding-bottom: 20px;
    position: relative;
}

.roster-dropdown-container {
    margin-right: 0;
}

.roster-dropdown-list li {
    -ms-flex-align: center;
    -ms-flex-direction: row;
    -ms-flex-pack: justify;
    -webkit-box-align: center;
    -webkit-box-direction: normal;
    -webkit-box-orient: horizontal;
    -webkit-box-pack: justify;
    -webkit-transition: background-color 150ms ease;
    align-items: center;
    cursor: pointer;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    flex-direction: row;
    font-size: 16px;
    justify-content: space-between;
    padding: 0 10px 0 0;
    transition: background-color 150ms ease;
    width: 100%;
    /* outline: solid 1px blue; */
}

.roster-dropdown-list li:hover,
.teams-dropdown-list li:hover {
    background-color: #d8d8d8;
}

.roster-dropdown-list li a,
.teams-dropdown-list li a {
    -ms-flex-align: center;
    -ms-flex-direction: row;
    -ms-flex-pack: justify;
    -webkit-box-align: center;
    -webkit-box-direction: normal;
    -webkit-box-orient: horizontal;
    -webkit-box-pack: justify;
    -webkit-transition: background-color 150ms ease;
    align-items: center;
    color: #000;
    cursor: pointer;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    flex-direction: row;
    font-size: 16px;
    justify-content: space-between;
    overflow: hidden;
    padding: 0 10px 0 0;
    text-decoration: none;
    transition: background-color 150ms ease;
    width: 100%;
    /* outline: solid 1px blue; */
}

.roster-dropdown-name {
    font-weight: bold;
    padding: 10px 0 10px 10px;
    width: 100%;
    /* outline: solid 1px red; */
}

.roster-dropdown-photo-container {
    -ms-flex-align: baseline;
    -ms-flex-direction: row;
    -ms-flex-pack: end;
    -webkit-box-align: baseline;
    -webkit-box-direction: normal;
    -webkit-box-orient: horizontal;
    -webkit-box-pack: end;
    align-items: baseline;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    flex-direction: row;
    height: auto;
    justify-content: flex-end;
    margin-left: 10px;
    width: 55px;
    /* outline: solid 1px red; */
}
/* ... */

